link to delogo releases

--- a/mksoft/avisynth.html
+++ b/mksoft/avisynth.html
@@ -16,8 +16,8 @@ AviSynth 2.5 用のプラグインです。
 </p>
 <hr>
 
-<h2><a name="delogo" href="arc/delogo_avisynth_005a.zip">◇透過性ロゴ フィルタ</a>
-<span class="append">[<a href="src/delogo_avisynth_src20080203.zip" title="delogo source">ソースコード(GPL)</a>]</span>
+<h2><a name="delogo" href="https://github.com/makiuchi-d/delogo-avisynth/releases/tag/v0.05a">◇透過性ロゴ フィルタ</a>
+<span class="append">[<a href="https://github.com/makiuchi-d/delogo-avisynth" title="delogo source">ソースコード(GPL)</a>]</span>
 <span class="append">[<a href="logodata.html">ロゴデータ置き場</a>]</span>
 </h2>
 <p>
