--- a/mksoft/aviutl.html
+++ b/mksoft/aviutl.html
@@ -100,7 +100,7 @@ BS様が更なる最適化をしてくださいました。
 <dd>指定フレーム数移動を追加。</dd>
 </dl>
 
-<h2><a name="delogo" href="arc/delogo_013.zip">◇透過性ロゴフィルタ</a>
+<h2><a name="delogo" href="https://github.com/makiuchi-d/delogo-aviutl/releases/tag/v0.13">◇透過性ロゴフィルタ</a>
 <span class="append">[<a href="logodata.html">ロゴデータ置き場</a>]</span>
 </h2>
 <p>
@@ -114,7 +114,7 @@ BS 1/2, Animax などの半透明ロゴを付加または除去します →
 　すでに導入されている方はlogodata.ldpを上書きする必要はありません。</dd>
 </dl>
 
-<h2><a name="logoscan" href="arc/logoscan_007.zip">◇ロゴ解析プラグイン</a></h2>
+<h2><a name="logoscan" href="https://github.com/makiuchi-d/delogo-aviutl/releases/tag/logoscan-0.07">◇ロゴ解析プラグイン</a></h2>
 <p>
 ロゴの含まれる画像から透過性ロゴフィルタ用のロゴデータを作成します →
 <a href="logoscan.html">使い方</a>
