link to spectrum analyzer plugin releases

--- a/mksoft/aviutl.html
+++ b/mksoft/aviutl.html
@@ -81,7 +81,7 @@ BS様が更なる最適化をしてくださいました。
 (<a href="http://www40.atwiki.jp/aviutl41991/pages/37.html">再配布元</a>)
 </p>
 
-<h2><a name="spectrum" href="arc/spectrum_001.zip">◇スペクトラムアナライザープラグイン</a>
+<h2><a name="spectrum" href="https://github.com/makiuchi-d/spectrum-aviutl/releases/tag/v0.01">◇スペクトラムアナライザープラグイン</a>
 </h2>
 <p>
 音声信号を周波数ごとに分解し、その分布を表示します。
