link to field-separate release

--- a/mksoft/aviutl.html
+++ b/mksoft/aviutl.html
@@ -49,7 +49,7 @@ AviUtl内蔵の自動24fpsを内部で呼び出し、通常のビデオフィル
 <dd><em>[注意] AviUtl0.99では動きません。0.98系専用です。</em></dd>
 </dl>
 
-<h2><a name="field" href="arc/field_002.zip">◇フィールド分離・結合フィルタ</a>
+<h2><a name="field" href="https://github.com/makiuchi-d/field-separate-aviutl/releases/tag/v0.02">◇フィールド分離・結合フィルタ</a>
 </h2>
 <p>
 フィールドを分離・結合します。<br>
