--- a/mksoft/aviutl.html
+++ b/mksoft/aviutl.html
@@ -38,7 +38,7 @@ AviUtl内蔵の自動24fpsを内部で呼び出し、通常のビデオフィル
 <dd>キャッシュサイズの見直しとフィルタフラグの追加</dd>
 </dl>
 
-<h2><a name="delcycle" href="arc/delcycle_001.zip">◇周期間引きプラグイン</a>
+<h2><a name="delcycle" href="https://github.com/makiuchi-d/delcycle-aviutl/releases/tag/v0.01">◇周期間引きプラグイン</a>
 </h2>
 <p>
 24fps周期に従って間引きフレームを決定します。<br>
