link to sub24fps release

--- a/mksoft/aviutl.html
+++ b/mksoft/aviutl.html
@@ -27,7 +27,7 @@
 <dd>固定小数演算にして高速化</dd>
 </dl>
 
-<h2><a name="sub24fps" href="arc/sub24fps_001a.zip">◇自動24fps(代理)フィルタ</a>
+<h2><a name="sub24fps" href="https://github.com/makiuchi-d/sub24fps-aviutl/releases/tag/v0.01a">◇自動24fps(代理)フィルタ</a>
 </h2>
 <p>
 AviUtl内蔵の自動24fpsを内部で呼び出し、通常のビデオフィルタとして使ってしまいます。<br>
