link to delcomp release

--- a/mksoft/aviutl.html
+++ b/mksoft/aviutl.html
@@ -123,7 +123,7 @@ BS 1/2, Animax などの半透明ロゴを付加または除去します →
 <dd>ロゴファイルの最大データ数を拡張</dd>
 </dl>
 
-<h2><a name="delcomp" href="arc/delcomp.zip">◇間引きフレーム補完フィルタ</a>
+<h2><a name="delcomp" href="https://github.com/makiuchi-d/delcomp-aviutl/releases/tag/v0.01">◇間引きフレーム補完フィルタ</a>
 </h2>
 <p>
 間引かれるフレームを、次または前のフレームに任意の不透明度で重ねます
