link to aviutlyc repository

--- a/mksoft/avisynth.html
+++ b/mksoft/avisynth.html
@@ -31,8 +31,8 @@ AviSynth2.5インターフェイス, YUY2,YV12対応<br>
 <dd>※ロゴデータは上位互換を保っています。以前のデータがそのままつかえます。</dd>
 </dl>
 
-<h2><a name="aviutlyc" href="arc/aviutlyc_100.zip">◇Convert AviUtlYC Fix</a>
-<span class="append">[<a href="src/aviutlyc_src20090329.zip" title="aviutlyc source">ソースコード(GPL)</a>]</span>
+<h2><a name="aviutlyc" href="https://github.com/makiuchi-d/aviutlyc-avisynth/releases/tag/v1.00">◇Convert AviUtlYC Fix</a>
+<span class="append">[<a href="https://github.com/makiuchi-d/aviutlyc-avisynth" title="aviutlyc source">ソースコード(GPL)</a>]</span>
 </h2>
 <p>
 warpsharp.dllのAviUtl内部形式変換関数の変換式修正版です。<br>
