--- a/mksoft/avisynth.html
+++ b/mksoft/avisynth.html
@@ -52,8 +52,7 @@ AviSynth2.5インターフェイス, YUY2/RGB24/RGB32をサポート
 </p>
 
 <p class="copyright">
-<a href="old/index.html">過去のバージョン</a>
-<a href="src/index.html#avisynth">ソースファイル</a><br>
+<a href="https://github.com/makiuchi-d">リポジトリ (GitHub)</a><br>
 雑誌等への掲載は事後でもいいので連絡ください。
 (C)<a href="mailto:makki_d210@yahoo.co.jp">MakKi</a>
 </p>
