--- a/mksoft/aviutl.html
+++ b/mksoft/aviutl.html
@@ -139,8 +139,7 @@ BS 1/2, Animax などの半透明ロゴを付加または除去します →
 </p>
 
 <p class="copyright">
-<a href="old/index.html">過去のバージョン</a>
-<a href="src/index.html#aviutl">ソースファイル</a><br>
+<a href="https://github.com/makiuchi-d">リポジトリ (GitHub)</a><br>
 雑誌等への掲載は事後でもいいので連絡ください。
 (C)<a href="mailto:makki_d210@yahoo.co.jp">MakKi</a><br>
 </p>
