remove new mark

--- a/mksoft/index.html
+++ b/mksoft/index.html
@@ -24,7 +24,7 @@
 <h2><a href="aviutl.html">AviUtlプラグイン</a></h2>
 <p>
 AviUtl用プラグインを公開しています。<br>
-<em class="new">NEW&quot;</em> 万華鏡フィルタを更新しました。(ver0.02; 2010/9/12)<br>
+<!-- em class="new">NEW&quot;</em> 万華鏡フィルタを更新しました。(ver0.02; 2010/9/12)<br -->
 </p>
 
 <h2><a href="avisynth.html">AviSynthプラグイン</a></h2>
