--- a/mksoft/trash/index.html
+++ b/mksoft/trash/index.html
@@ -15,7 +15,7 @@
 </p>
 <hr>
 
-<h2><a name="flvcat" href="flvcat.c">◇ flvcat.c</a></h2>
+<h2><a name="flvcat" href="https://github.com/makiuchi-d/flvcat/blob/master/flvcat.c">◇ flvcat.c</a></h2>
 <p>
 FLVファイルの結合とか。
 </p>
