--- a/mksoft/trash/index.html
+++ b/mksoft/trash/index.html
@@ -38,7 +38,7 @@ Makefile用にソースの依存関係を解析するLisp その2。
 (以前のもの: <a href="makedepend.l">makedepend.l</a>)
 </p>
 
-<h2><a name="wol" href="wol.c">◇ wol.c</a></h2>
+<h2><a name="wol" href="https://github.com/makiuchi-d/wol-win/blob/master/wol.c">◇ wol.c</a></h2>
 <p>
 WakeOnLANクライアント (ソースのみ)
 </p>
