--- a/mksoft/trash/index.html
+++ b/mksoft/trash/index.html
@@ -26,7 +26,7 @@ FLVファイルの結合とか。
 カレントディレクトリにMakefileがあるときはmake呼び出し、無い時はコンパイラにファイル名を渡すLisp
 </p>
 
-<h2><a name="logogray" href="logogray.zip">◇ logogray</a></h2>
+<h2><a name="logogray" href="https://github.com/makiuchi-d/logogray/releases/latest">◇ logogray</a></h2>
 <p>
 透過性ロゴフィルタ用ロゴデータを白黒ロゴにするだけのツール
 </p>
